--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ codegen-units = 1
 
 [workspace.dependencies]
 
+rand = "0.8.5"
+base64 = "0.22.0"
+
 # Panic hook to make debugging wasm easier
 console_error_panic_hook = "0.1.7"
 
