--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -81,5 +81,7 @@ uuid = { version = "1.0", features = [ "serde", "v4" ], default-features = false
 web-sys = { workspace = true, optional = true, features = [ 
     "PushSubscription",
     "PushEncryptionKeyName",
+    "PushManager",
+    "PushSubscriptionOptionsInit",
 ] }
 semver = "1.0.23"
